# barbacoa-server-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile.ini  LICENSE  README.md
docs.md/: how_to_prepare_binaries_for_corefile_investigation.md
examples/: CMakeLists.txt  app_block_pipe.cpp  app_default_callbacks.cpp  app_multithreaded.cpp  block_pipe.cpp  crash_dump.cpp  default_callbacks.cpp  err_emulator.cpp  err_emulator.h  pretty_simple.cpp  progress_bar.cpp  sample.cpp  simple_tcp_client.cpp  simple_tcp_server.cpp  simple_web_server.cpp  thread_for_business_and_logs.cpp
include/server_lib/: application.h  asserts.h  change_current_dir.h  common_def.h  emergency_helper.h  event_loop.h  fs_helper.h  log_files_watchdog.h  logger.h  logging_helper.h  mt_event_loop.h  mt_server.h  observer.h  options_helper.h  platform_config.h  protected_mutex.h  revision.h  signal_helper.h  simple_observer.h  singleton.h  solo_timers.h  thread_local_storage.h  thread_sync_helpers.h  timers.h  types.h  version.h  wait_asynch_request.h
include/server_lib/network/: app_connection_i.h  app_unit.h  app_unit_builder_i.h  base_config.h  client.h  client_config.h  connection.h  dstream_builder.h  ifconfig.h  integer_builder.h  msg_builder.h  network_client.h  network_server.h  nt_client.h  nt_connection.h  nt_persist_client.h  nt_server.h  nt_unit.h  nt_unit_builder_i.h  persist_network_client.h  protocols.h  raw_builder.h  scope_runner.h  server.h  server_config.h  string_builder.h  tcp_client_i.h  tcp_connection_i.h  tcp_server_i.h  unit.h  unit_builder_i.h
include/server_lib/network/transport/: client_impl_i.h  connection_impl_i.h  nt_client_i.h  nt_connection_i.h  nt_server_i.h  server_impl_i.h  web_server_impl_i.h
include/server_lib/network/web/: client_http.hpp  client_https.hpp  server_http.hpp  server_https.hpp  status_code.h  status_code.hpp  utility.hpp  web_client.h  web_client_config.h  web_client_i.h  web_entities.h  web_server.h  web_server_config.h  web_server_i.h  web_server_response.h
libs/: CMakeLists.txt
libs/tacopie/: CMakeLists.txt
libs/tacopie/sources/network/unix/: unix_tcp_socket.cpp
libs/web/: CMakeLists.txt  README.md
libs/web/examples/: CMakeLists.txt  http_examples.cpp  https_examples.cpp
libs/web/include/moonlight/web/: server_http.hpp  utility.hpp
libs/web/tests/: CMakeLists.txt  io_test.cpp  parse_test.cpp  status_code_test.cpp
src/: app_empty_spec.cpp  application.cpp  application_config.cpp  application_impl.cpp  application_impl.h  change_current_dir.cpp  emergency_helper.cpp  event_loop.cpp  fs_helper.cpp  log_files_watchdog.cpp  logger.cpp  logger_set_internal_group.h  logging_trace.cpp  logging_trace.h  main_loop.cpp  mt_event_loop.cpp  mt_server.cpp  mt_server_empty_spec.cpp  options_helper.cpp  server_lib_revision.cpp.in  signal_helper.cpp  thread_local_storage.cpp  thread_sync_helpers.cpp  version.cpp
src/network/: app_connection_impl.cpp  app_connection_impl.h  app_unit.cpp  app_units_builder.cpp  app_units_builder.h  client.cpp  client_config.cpp  connection.cpp  dstream_builder.cpp  ifconfig.cpp  integer_builder.cpp  msg_builder.cpp  network_client.cpp  network_server.cpp  nt_client.cpp  nt_connection.cpp  nt_persist_client.cpp  nt_server.cpp  nt_unit.cpp  nt_units_builder.cpp  nt_units_builder.h  persist_network_client.cpp  raw_builder.cpp  scope_runner.cpp  server.cpp  server_config.cpp  string_builder.cpp  tcp_client_impl.cpp  tcp_client_impl.h  tcp_connection_impl.cpp  tcp_connection_impl.h  tcp_server_impl.cpp  tcp_server_impl.h  unit.cpp  unit_builder_manager.cpp  unit_builder_manager.h
src/network/transport/: asio_connection_impl.cpp  asio_connection_impl.h  client_impl_i.h  connection_impl_i.h  server_impl_i.h  tcp_base_connection_impl.cpp  tcp_base_connection_impl.h  tcp_client_connection_impl.cpp  tcp_client_connection_impl.h  tcp_client_impl.cpp  tcp_client_impl.h  tcp_connection_impl.cpp  tcp_connection_impl.h  tcp_connection_impl_2.cpp  tcp_connection_impl_2.h  tcp_server_connection_impl.cpp  tcp_server_connection_impl.h  tcp_server_impl.cpp  tcp_server_impl.h  unix_local_client_impl.cpp  unix_local_client_impl.h  unix_local_connection_impl.cpp  unix_local_connection_impl.h  unix_local_server_impl.cpp  unix_local_server_impl.h
src/network/web/: http_client_impl.h  http_server_impl.h  http_utility.h  https_client_impl.h  https_server_impl.h  web_client.cpp  web_client_request.cpp  web_entities.cpp  web_server.cpp  web_server_response.cpp
src/network/web/transport/: web_server_impl_i.h
src/win/: app_win_spec.cpp  mt_server_win_spec.cpp
tests/: common_tests.cpp  event_loop_tests.cpp  main.cpp  network_app_unit_tests.cpp  network_basic_tcp_tests.cpp  network_basic_tests.cpp  network_common.cpp  network_common.h  network_extended_tests.cpp  network_persist_client_tests.cpp  network_unix_local_tests.cpp  observer_tests.cpp  tests_common.cpp  tests_common.h  thread_tests.cpp  web_tests.cpp
